--- a/src/pages/userinfo/style.scss
+++ b/src/pages/userinfo/style.scss
@@ -1,6 +1,7 @@
 .headderbox {
   width: 750px;
   text-align: center;
+  position: relative;
 }
 
 .headerimg {
@@ -35,4 +36,71 @@
 .button {
   width: 700px;
   padding-left: 25px;
+}
+
+.infotag {
+  width: 710px;
+  position: absolute;
+  bottom: 10px;
+  left: 20px;
+  color: white;
+  text-align: left;
+
+  & .title {
+    margin-left: 20px;
+    margin-top: 5px;
+  }
+
+  & .desc {
+    margin-left: 20px;
+    margin-top: 5px;
+    font-size: 20px;
+    margin-bottom: 5px;
+  }
+}
+
+.edittag {
+  background-color: rgba(136,136,136,0.7);
+  position: absolute;
+  top: 10px;
+  right: 30px;
+  color: white;
+  font-size: 25px;
+  padding: 5px;
+}
+
+.headerboxbottom {
+  width: 710px;
+  margin-left: 20px;
+  font-size: 25px;
+  height: 80px;
+  margin-top: -10px;
+  align-items: center;
+}
+
+.paneltitle {
+  position: relative;
+  font-weight: bold;
+  line-height: 2;
+  padding-left: 50px;
+  color: black;
+
+  &:before {
+    content: "";
+    display: inline-block;
+    position: absolute;
+    left: 0.512rem;
+    top: 50%;
+    margin-top: -0.42667rem;
+    width: 2PX;
+    height: 0.85333rem;
+    background-color: #6190e8;
+    box-shadow: 0 0.14933rem 0.256rem 0 rgba(97, 144, 232, 0.2);
+    border-radius: 1PX;
+  }
+}
+
+.userdesc {
+  font-size: 25px;
+  padding: 20px;
 }
