--- a/src/app.scss
+++ b/src/app.scss
@@ -71,11 +71,12 @@ page {
 		opacity: 0.7;
 	}
 }
+//重写taro-ui样式
 
 .item-extra__info {
 	max-width: 300px !important;
 }
 
-.test {
-	height: 100px;
+.at-tag {
+	margin: 5px;
 }
