--- a/src/pages/article/style.scss
+++ b/src/pages/article/style.scss
@@ -51,3 +51,14 @@
   width: 110px;
   border-radius: 50%;
 }
+
+.attabs {
+  .at-tabs__header {
+    height: 80px;
+  }
+
+  .fixtag {
+    height: 80px;
+    align-items: center;
+  }
+}
