--- a/src/pages/chat/style.scss
+++ b/src/pages/chat/style.scss
@@ -56,6 +56,15 @@
     z-index: 999;
   }
 }
+.pushmessage {
+  font-size: 25px;
+  color: #f97b43;
+  border-radius: 5px;
+  border: 1px solid;
+  margin-top: 20px;
+  text-align: center;
+  width: 120px;
+}
 
 .bottomview {
   width: 100%;
