--- a/src/pages/style.scss
+++ b/src/pages/style.scss
@@ -77,3 +77,10 @@
   width: 400px;
   margin: 20px 0px;
 }
+.badge {
+  padding: 5px 10px;
+  background-color: red;
+  border-radius: 50%;
+  color: white;
+  font-size: 22px;
+}
