--- a/src/pages/chat/style.scss
+++ b/src/pages/chat/style.scss
@@ -43,6 +43,7 @@
   margin-right: 15px;
   font-size: 30px;
   background-color: #9fe759;
+  word-wrap: normal !important;
   &:after {
     content: "";
     width: 0;
