--- a/src/pages/style.scss
+++ b/src/pages/style.scss
@@ -33,7 +33,9 @@
     }
   }
 }
-
+.border-radius {
+  border-radius: 50%;
+}
 .home_card_container {
   margin: 20px auto auto;
   width: 700px;
@@ -48,7 +50,7 @@
   }
 
   & .title {
-    font-size: 35px;
+    font-size: 28px;
   }
 
   & .desc {
