--- a/src/pages/userinfo/style.scss
+++ b/src/pages/userinfo/style.scss
@@ -94,6 +94,7 @@
   margin-right: 45px;
   font-size: 30px;
   font-weight: normal;
+  margin-top: -45px;
 }
 
 .userdesc {
@@ -108,5 +109,19 @@
   bottom: 0px;
   width: 100%;
   color: white;
-  padding: 20px;
+  line-height: 3;
+}
+.fixmessage {
+  position: fixed;
+  bottom: 100px;
+  right: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  color: white;
+  height: 110px;
+  width: 110px;
+  border-radius: 50%;
 }
