--- a/src/pages/style.scss
+++ b/src/pages/style.scss
@@ -50,7 +50,6 @@
   }
 
   & .title {
-    font-size: 28px;
   }
 
   & .desc {
@@ -62,7 +61,9 @@
     margin-right: 20px;
   }
 }
-
+.fontbig {
+  font-size: 33px;
+}
 .user_list_item {
   height: 100px;
   align-items: center;
