--- a/src/pages/message/style.scss
+++ b/src/pages/message/style.scss
@@ -1,8 +1,8 @@
-.item {
-  position: relative;
-  & .badge {
-    position: absolute;
-    left: 66px;
-    top: 30px;
-  }
+
+.descstyle {
+  font-size: 25px;
+  margin-right: 20px;
+}
+.timestyle {
+  margin-right: 20px;
 }
