--- a/src/pages/chat/style.scss
+++ b/src/pages/chat/style.scss
@@ -69,6 +69,11 @@
 
 .bottomview {
   width: 100%;
+  background: white;
+}
+.inputview {
+  width: 710px;
+  margin: auto;
 }
 .curtainimg {
   width: 100%;
