--- a/src/pages/qrcode/style.scss
+++ b/src/pages/qrcode/style.scss
@@ -7,3 +7,9 @@
   width: 710px;
   margin: auto;
 }
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 80px 0px;
+}
