--- a/src/pages/demo/style.scss
+++ b/src/pages/demo/style.scss
@@ -63,6 +63,31 @@
 .content-min-height {
   min-height: 100px;
 }
+.fix {
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  color: white;
+  height: 110px;
+  width: 110px;
+  border-radius: 50%;
+}
+.attabs {
+  .at-tabs__header {
+    height: 80px;
+  }
+
+  .fixtag {
+    height: 80px;
+    align-items: center;
+    font-size: 28px;
+  }
+}
 .fixbottom {
   position: fixed;
   bottom: 0px;
@@ -83,4 +108,26 @@
   height: 130px;
   width: 130px;
   margin: 10px;
+}
+.demoitem {
+  width: 375px;
+  & .content {
+    margin: 10px;
+    background: white;
+    border-radius: 6px;
+    overflow: hidden;
+  }
+  & .image {
+    width: 355px;
+    height: 355px;
+    border-radius: 6px 6px 0px 0px;
+  }
+  & .name {
+    font-size: 30px;
+    height: 90px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 5px;
+  }
 }
