--- a/src/pages/redpack/style.scss
+++ b/src/pages/redpack/style.scss
@@ -1,11 +1,56 @@
+.header {
+  background-color: #d65c44;
+  position: relative;
+  height: 150px;
+
+  & .headerbgwhite {
+    top: 0px;
+    width: 710px;
+    margin-left: 20px;
+    background-color: white;
+    position: absolute;
+    height: 150px;
+  }
+  & .headerbgred {
+    position: absolute;
+    top: 0px;
+    height: 75px;
+    width: 100%;
+    background-color: #d65c44;
+    border-radius: 0 0 50% 50%;
+    box-shadow: 0px 5px 20px #d65c44;
+    z-index: 2;
+  }
+  & .headerimg {
+    position: absolute;
+    top: 0px;
+    height: 150px;
+    width: 150px;
+    left: 300px;
+    display: block;
+    margin: auto;
+    border-radius: 50%;
+    box-shadow: 0px 5px 20px #d65c44;
+    z-index: 3;
+  }
+}
 .content {
-  background: url(https://cdnbcsl.baicaiyun.com/bg.jpg) no-repeat;
-  background-size: 100% 100%;
   height: 100%;
   width: 100%;
-
+  background-color: #d65c44;
+  & .header {
+    height: 150px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  & .body {
+    width: 710px;
+    margin: auto;
+    background-color: white;
+  }
   & .title {
-    padding-top: 80px;
     color: white;
     text-align: center;
     margin-bottom: 20px;
@@ -60,37 +105,51 @@
 }
 
 .attabs {
-  .at-tabs__header {
-    height: 80px;
+  width: 100%;
+  line-height: 3;
+  font-size: 30px;
+  letter-spacing: 3px;
+
+  & .choose {
+    color: white;
+    border-bottom: 4px solid white;
+    font-weight: 600;
   }
 
-  .fixtag {
-    height: 80px;
-    align-items: center;
-    font-size: 28px;
+  & .default {
+    color: black;
+    border-bottom: 0;
   }
 }
 
 .sharecontent {
-  background: url(https://cdnbcsl.baicaiyun.com/ditu6.jpg) no-repeat;
+  background: url(https://cdnbcsl.baicaiyun.com/91240717027975328.jpg) no-repeat;
   background-size: 100% 100%;
   height: 100%;
   width: 100%;
-  & .shareheader {
-    position: absolute;
-    top: 490px;
-    width: 100%;
-    text-align: center;
+  & .redpackbg {
+    background: url(https://cdnbcsl.baicaiyun.com/243274031525621095.png)
+      no-repeat;
+    background-size: 100% 100%;
+    height: 800px;
+    margin: auto;
+    width: 600px;
+    position: relative;
   }
   & .shareheaderimg {
+    position: absolute;
+    top: 260px;
+    left: 225px;
     border-radius: 50%;
-    width: 120px;
-    height: 120px;
+    width: 150px;
+    height: 150px;
+    display: block;
+    margin: auto;
   }
   & .sharebutton {
     position: absolute;
-    bottom: 350px;
-    left: 175px;
+    left: 100px;
+    bottom: 100px;
     background: #63d978;
     width: 400px;
     line-height: 2.5;
@@ -102,10 +161,23 @@
   }
   & .sharedesc {
     font-size: 25px;
-    position: absolute;
-    bottom: 100px;
     width: 100%;
     text-align: center;
     color: #333;
+    line-height: 4;
+  }
+}
+
+.infoblock {
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
+
+  & .number {
+    font-weight: bold;
+    font-size: 45px;
   }
 }
