--- a/src/pages/redpack/style.scss
+++ b/src/pages/redpack/style.scss
@@ -1,3 +1,4 @@
+$redpadk: #d65c44;
 .header {
   background-color: #d65c44;
   position: relative;
@@ -123,13 +124,12 @@
 }
 
 .sharecontent {
-  background: url(https://cdnbcsl.baicaiyun.com/91240717027975328.jpg) no-repeat;
+  background: url(https://djcdn.baicaiyun.com/hbfxbj1.jpg) no-repeat;
   background-size: 100% 100%;
   height: 100%;
   width: 100%;
   & .redpackbg {
-    background: url(https://cdnbcsl.baicaiyun.com/243274031525621095.png)
-      no-repeat;
+    background: url(https://djcdn.baicaiyun.com/hbfxbj2.png) no-repeat;
     background-size: 100% 100%;
     height: 800px;
     margin: auto;
@@ -195,11 +195,50 @@
   text-align: center;
 }
 .detailicon {
-  width: 25px;
+  width: 30px;
   margin-right: 10px;
 }
+.looktitle {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
+  &:before {
+    content: " ";
+    height: 8px;
+    border-radius: 5px;
+    width: 50px;
+    background: $redpadk;
+    margin-right: 20px;
+  }
+  &:after {
+    content: " ";
+    height: 8px;
+    width: 50px;
+    background: $redpadk;
+    border-radius: 5px;
+    margin-left: 20px;
+  }
+}
 .redpackOpen {
   width: 600px;
   height: 700px;
+
+  & .redpackOpenTitle {
+    letter-spacing: 10px;
+    color: #661504;
+  }
+  & .redpackOpenMoney {
+    color: #ffda76;
+    font-size: 50px;
+  }
+  & .redpackOpenButton {
+    background: #63d978;
+    width: 400px;
+    margin: auto;
+    line-height: 2.5;
+    border-radius: 50px;
+    font-size: 28px;
+    color: white;
+  }
 }
