--- a/src/pages/demo/style.scss
+++ b/src/pages/demo/style.scss
@@ -126,7 +126,7 @@
     font-size: 30px;
     height: 90px;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     margin: 0 5px;
   }
