--- a/src/pages/style.scss
+++ b/src/pages/style.scss
@@ -3,7 +3,17 @@
 }
 
 .home_header_bg {
-  height: 180px;
+  height: 280px;
+  background: url(https://djcdn.baicaiyun.com/sybg.png) no-repeat;
+  background-size: 100% 100%;
+
+  & .headertitle {
+    font-size: 45px;
+  }
+  & .headerdesc {
+    font-size: 35px;
+    letter-spacing: 10px;
+  }
 }
 
 .home_header_container {
@@ -26,7 +36,7 @@
   & .footer {
     height: 100px;
     align-items: center;
-    background-color: #f0f9ff;
+    background-color: #effbf1;
 
     .line {
       border-right: solid 1px;
@@ -36,17 +46,35 @@
 .border-radius {
   border-radius: 50%;
 }
-.home_card_container {
-  margin: 20px auto auto;
-  width: 700px;
+.userheader {
+  width: 710px;
   height: 180px;
-  align-items: center;
-  border-radius: 5px;
+  margin: auto;
+
+  & .userheadericon {
+    margin: 20px;
+  }
+}
+.home_card_container {
+  width: 375px;
+  height: 250px;
+
+  & .content {
+    margin: 20px;
+    width: 100%;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+  }
 
   & .icon {
-    height: 100px;
-    width: 100px;
-    margin: 0 20px;
+    height: 35px;
+    width: 35px;
+    margin: 0 10px;
+    display: block;
   }
 
   & .title {
@@ -54,7 +82,7 @@
 
   & .desc {
     margin-bottom: 10px;
-    font-size: 22px;
+    font-size: 20px;
   }
 
   & .right {
