--- a/src/pages/userinfo/style.scss
+++ b/src/pages/userinfo/style.scss
@@ -1,10 +1,10 @@
-.userinfo_header_bg{
+.userinfo_header_bg {
   height: 150px;
   background: url(https://djcdn.baicaiyun.com/sybg.png) no-repeat;
   background-size: 100% 100%;
 }
 .headderbox {
-  width: 710px;
+  width: 720px;
   height: 400px;
   margin: auto;
   position: relative;
@@ -75,6 +75,8 @@
   height: 80px !important;
   line-height: 80px !important;
   font-size: 28px !important;
+  width: 330px !important;
+  margin: inherit !important;
 }
 .headerboxbottom {
   width: 750px;
@@ -92,6 +94,7 @@
   align-items: center;
   justify-content: space-between;
   font-size: 35px;
+  font-weight: 600;
 
   & .extra {
     margin-right: 20px;
@@ -106,13 +109,20 @@
   font-size: 30px;
   font-weight: normal;
 }
-
+.photosimage {
+  width: 710px;
+  margin-left: 20px;
+  margin-top: 20px;
+}
 .userdesc {
-  font-size: 28px;
+  font-size: 25px;
   padding: 20px;
 }
 .content-min-height {
   min-height: 100px;
+}
+.margin-left-30 {
+  margin-left: 20px;
 }
 .fixbottom {
   // position: fixed;
@@ -133,7 +143,6 @@
   height: 110px;
   width: 110px;
   border-radius: 50%;
-
 }
 .fixmessage {
   position: fixed;
