--- a/src/pages/userinfo/style.scss
+++ b/src/pages/userinfo/style.scss
@@ -25,11 +25,11 @@
     line-height: 2;
   }
   & .career {
-    font-size: 28px;
+    font-size: 25px;
     line-height: 1.5;
   }
   & .info {
-    font-size: 25px;
+    font-size: 28px;
     line-height: 1.5;
   }
 }
@@ -67,6 +67,13 @@
   }
 }
 
+.usertag {
+  font-size: 25px;
+  padding: 10px;
+  .attag {
+    width: 235px;
+  }
+}
 .button {
   width: 710px;
   margin: auto;
@@ -123,6 +130,11 @@
 }
 .margin-left-30 {
   margin-left: 20px;
+}
+.goaddbutton {
+  width: 710px;
+  margin-top: 20px !important;
+  margin: auto;
 }
 .fixbottom {
   // position: fixed;
