--- a/src/pages/demo/style.scss
+++ b/src/pages/demo/style.scss
@@ -132,4 +132,12 @@
     width: 315px;
     margin: auto;
   }
+  & .nameline {
+    text-overflow: -o-ellipsis-lastline;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+  }
 }
