--- a/src/pages/redpack/style.scss
+++ b/src/pages/redpack/style.scss
@@ -253,6 +253,9 @@ $redpadk: #d65c44;
     justify-content: center;
     align-items: center;
   }
+  & .redpackOpenDesc {
+    font-size: 25px;
+  }
 }
 
 .moneyview {
